<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">uSticker</string>
    <string name="got_it">Got it!</string>
    <string name="actions">Actions</string>
    <string name="settings">Settings</string>
    <string name="about">About</string>
    <string name="close">Close</string>
    <string name="ignore">Ignore</string>
    <string name="open_settings">Open settings</string>
    <string name="report">Report bug</string>
    <string name="help">Help</string>
    <string name="github">GitHub</string>
    <string name="version">Version</string>
    <string name="enable_keyboard_title">Enable keyboard</string>
    <string name="enable_keyboard_message">
        Starting in version 2.0, uSticker now comes with a standalone
        keyboard. In order to use uSticker, please enable the keyboard
        in the system settings.\n\n(For uSticker 1.x users, Google
        removed custom sticker support in Gboard 10.2, so we were forced
        to create our own keyboard. Sorry for the inconvenience.)
    </string>
    <string name="help_summary">View app usage instructions</string>
    <string name="help_text">
        <![CDATA[
            Copy your images to the configured storage location,
            then press the import stickers button. Your images will then
            show up in the keyboard.<br><br>

            Have too many stickers to scroll through? Put your stickers
            in sub-directories, and we\'ll generate a new sticker tab for
            each.<br><br>

            Only PNG, JPG, GIF, BMP, and WebP files are supported. Any
            files or directories with a name starting with . are ignored.
        ]]>
    </string>
    <string name="changelog">Changelog</string>
    <string name="changelog_text">
        <![CDATA[
            <big><b>2.0.0</b></big><br>
            uSticker now comes with its own keyboard. Removed Gboard
            support and Firebase dependencies.
            <br><br>

            <big><b>1.6.0</b></big><br>
            Added an option to sort stickers by alphabetical order.
            <br><br>

            <big><b>1.5.4</b></big><br>
            Gboard now limits you to 100 stickers per pack, so added a
            validation check for that. Also removed the bug report
            button as it was encouraging spam.
            <br><br>

            <big><b>1.5.3</b></big><br>
            Removed unused storage permission. Fixed incorrect sticker
            count calculation.
            <br><br>

            <big><b>1.5.2</b></big><br>
            No longer crashes when failing to find a file browser app.
            Also added a button to make reporting bugs easier.
            <br><br>

            <big><b>1.5.1</b></big><br>
            Changed sticker keywords (for search) to be Unicode-aware.
            <br><br>

            <big><b>1.5.0</b></big><br>
            Use Storage Access Framework to select sticker directory.
            This means you can now import stickers from an external
            SD card. Also removed support for Android 4.4.
            <br><br>

            <big><b>1.4.4</b></big><br>
            Fixed crash if the configured sticker directory does not
            exist. Also reworded some text to be more understandable.
            <br><br>

            <big><b>1.4.3</b></big><br>
            Fixed index refresh failing if you have a lot of stickers.
            Again.
            <br><br>

            <big><b>1.4.2</b></big><br>
            Added support for WebP images.
            <br><br>

            <big><b>1.4.1</b></big><br>
            Fixed a bug that caused the app to crash when requesting
            storage permissions on some phones.
            <br><br>

            <big><b>1.4</b></big><br>
            Disabled the sneaky Firebase analytics that were enabled by
            default.
            <br><br>

            <big><b>1.3</b></big><br>
            Added support for Android 4.4 through 6.0.
            <br><br>

            <big><b>1.2</b></big><br>
            No longer fails if you have over 1000 stickers. Seriously
            though, why do you have over 1000 stickers?!
            <br><br>

            <big><b>1.1</b></big><br>
            You can now search for stickers in Gboard! Keywords are
            generated from the sticker file and parent directory names.
            <br><br>

            <big><b>1.0</b></big><br>
            Initial release.
        ]]>
    </string>
    <string name="github_summary">github.com/apsun/uSticker</string>
    <string name="import_stickers">Import stickers</string>
    <string name="import_stickers_summary">Press after adding or removing stickers</string>
    <string name="importing_stickers">Importing stickers…</string>
    <string name="import_success_toast">Successfully imported %1$d sticker(s)</string>
    <string name="import_failed_title">Import failed</string>
    <string name="import_failed_message">
        An unknown error occurred while importing stickers. If you would like to help improve
        uSticker, please submit an issue on GitHub using the button below. Thank you!\n\n%1$s
    </string>
    <string name="change_sticker_dir">Change sticker directory</string>
    <string name="change_sticker_dir_summary">Select a new directory to search for stickers</string>
    <string name="auto_switch_keyboard">Auto switch keyboard</string>
    <string name="auto_switch_keyboard_summary">Switch back to the previous keyboard after selecting a sticker</string>
    <string name="sticker_dir_invalid">Could not read stickers; please re-select the sticker directory</string>
    <string name="failed_to_obtain_read_permissions">Failed to obtain read permissions</string>
    <string name="cannot_find_file_browser">
        Cannot find an app that supports ACTION_OPEN_DOCUMENT_TREE. If you disabled the
        built-in Android file browser, please re-enable it to use uSticker.
    </string>
    <string name="issue_template">
        uSticker version: %1$s
        \nAndroid version: %2$s
    </string>
    <string name="issue_template_stacktrace">
        uSticker version: %1$s
        \nAndroid version: %2$s
        \nException stacktrace:
        \n```\n%3$s```
    </string>
    <string name="issue_template_copied">Details copied to clipboard. Please submit an issue on GitHub.</string>
</resources>
