<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory android:title="@string/actions">
        <Preference
            android:key="pref_import_stickers"
            android:title="@string/import_stickers"
            android:summary="@string/import_stickers_summary"/>
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/settings">
        <Preference
            android:key="pref_change_sticker_dir"
            android:title="@string/change_sticker_dir"
            android:summary="@string/change_sticker_dir_summary"/>
        <SwitchPreference
            android:key="pref_auto_switch_keyboard"
            android:title="@string/auto_switch_keyboard"
            android:summary="@string/auto_switch_keyboard_summary"/>
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/about">
        <Preference
            android:key="pref_about_help"
            android:title="@string/help"
            android:summary="@string/help_summary"/>
        <Preference
            android:key="pref_about_github"
            android:title="@string/github"
            android:summary="@string/github_summary"/>
        <Preference
            android:key="pref_about_version"
            android:title="@string/version"/>
    </PreferenceCategory>
</PreferenceScreen>
